remove width to fix stretched buttons

--- a/src/css/header-nav.css
+++ b/src/css/header-nav.css
@@ -15,7 +15,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-	width: 100%;
 }
 .header-buttons-container button {
 	flex: 1;
